fix: overflow on load

--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -3,6 +3,7 @@ body,
 #__next {
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 #__next {
